# TransXion

./: .gitattributes  .gitignore  README.md
aml-terraformer/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
aml-terraformer/docs/: EVALUATION.md  GRPO_TRAINING_GUIDE.md  README.md  RULE_ANALYSIS.md
aml-terraformer/evaluation/: README.md  analyze_transaction_powerlaw.py  powerlaw_utils.py  requirements.txt
aml-terraformer/examples/: test_rule_based_monitor.py
aml-terraformer/rule/: README.md  build_rule_features.py  run_all.sh  run_rule_engine.py
aml-terraformer/rule/data/: rule.json
aml-terraformer/scripts/: analyze_rule_hits.py  evaluate_detection_rate.py  run_perturbation.py  run_rule_analysis.sh  test_evaluate.sh  train_gbt_monitor.py  train_grpo.py
aml-terraformer/src/aml_terraformer/: __init__.py  __main__.py  cli.py
aml-terraformer/src/aml_terraformer/agent/: __init__.py  client_interface.py  fallback.py  llm_agent.py  prompt.py  sanitize.py
aml-terraformer/src/aml_terraformer/core/: __init__.py  budget.py  candidates.py  clusters.py  identifiers.py  normalize.py  pre_validator.py  validator.py
aml-terraformer/src/aml_terraformer/io/: __init__.py  csv_handler.py  timestamp_handler.py
aml-terraformer/src/aml_terraformer/monitor/: __init__.py  base.py  gbt_monitor.py  gnn_monitor.py  random_monitor.py  rule_based_monitor.py  wrapper.py
aml-terraformer/src/aml_terraformer/pipeline/: __init__.py  logging.py  report.py  runner.py
aml-terraformer/src/aml_terraformer/rl/: __init__.py  gnn_monitor_usage_example.py  local_trainer.py  (+3 more)
aml-terraformer/tests/: __init__.py  conftest.py  test_core.py  test_io.py  test_monitor.py
(+57 files in other folders)
