[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aml_terraformer"
version = "0.1.0"
description = "LLM-based perturbation for AML transaction graphs"
readme = "docs/README.md"
requires-python = ">=3.8"
authors = [
    {name = "AML Research Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "networkx>=2.8.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
deepseek = ["openai>=1.0.0"]
local = ["transformers>=4.30.0", "torch>=2.0.0", "peft>=0.4.0"]
gbt = ["lightgbm>=3.0.0", "scikit-learn>=1.0.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "peft>=0.4.0",
    "lightgbm>=3.0.0",
    "scikit-learn>=1.0.0",
]

[project.scripts]
aml-terraformer = "aml_terraformer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "aml_terraformer",
    "aml_terraformer.agent",
    "aml_terraformer.core",
    "aml_terraformer.io",
    "aml_terraformer.monitor",
    "aml_terraformer.pipeline",
    "aml_terraformer.rl",
    "aml_terraformer.tools",
]
